# edge_llm_infra

./: .$分布式大模型流程图.drawio.bkp  .gitignore  README.md  分布式大模型流程图.drawio
.specstory/history/: 2025-07-31_05-23Z-询问意思.md
hybird-comm/include/: pzmq.hpp  pzmq_data.h
hybird-comm/src/: pzmq_data.cpp
infra-controller/include/: StackFlow.h  StackFlowUtil.h  channel.h
infra-controller/src/: StackFlow.cpp  StackFlowUtil.cpp  channel.cpp
node/test/: CMakeLists.txt
node/test/src/: main.cpp
sample/: CMakeLists.txt  pub.cc  pz_rpc_call.cc  pz_rpc_server.cc  rpc_call.cc  rpc_server.cc  stress.py  sub.cc  test.py
unit-manager/: CMakeLists.txt
unit-manager/include/: all.h  remote_action.h  remote_server.h  session.h  unit_data.h  zmq_bus.h
unit-manager/src/: config.cpp  main.cpp  remote_action.cpp  remote_server.cpp  tcp_comm.cpp  unit_data.cpp  zmq_bus.cpp
